fixed display overflow style

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -83,6 +83,8 @@ h6 {
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
+  flex-wrap: wrap;
+  word-break: break-word;
   background-color: var(--bg-secondary);
 }
 
